--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.1.0
   flutter_spinkit: ^5.0.1
   intl: ^0.18.1
+  image_picker: ^1.0.4
+  # date_time_picker: "^2.1.0"
 
 dev_dependencies:
   flutter_test:
